[package]
name = "problem4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
linfa = { version = "0.6.1", features = ["blas"] }
linfa-datasets = { version = "0.6.1", features = ["iris", "winequality"] }
linfa-svm = "0.6.1"
linfa-trees = "0.6.1"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
sprs = "=0.11.0"
